<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lifehackig.fitnessapp.ui.LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/main_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextLight"
            android:padding="16dp"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextLight"
            android:padding="16dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextLight"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/don_t_have_an_account_sign_up"/>

    </LinearLayout>

</RelativeLayout>
