<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    tools:context="com.lifehackig.fitnessapp.ui.log_exercise.LogExerciseActivity">

    <LinearLayout
        android:id="@+id/workoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/select_a_workout_from_your_favorites"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/selectButton"
                android:layout_alignBottom="@+id/selectButton"
                android:layout_alignTop="@+id/selectButton"
                android:layout_marginEnd="10dp"
                android:background="@color/colorTextLight">
                <Spinner
                    android:id="@+id/workoutSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <Button
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorTextLight"
                android:text="@string/select"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/or"/>
        <Button
            android:id="@+id/newExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextLight"
            android:text="@string/add_a_new_exercise" />
    </LinearLayout>

</RelativeLayout>
