<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lifehackig.fitnessapp.ui.NewWorkoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/workoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorTextLight"
            android:padding="16dp"
            android:inputType="text"
            android:hint="Workout Name" />

        <LinearLayout
            android:id="@+id/newExerciseForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workoutName"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextLight"
                android:padding="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:hint="@string/exercise_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/repsOrDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorTextLight"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/number"/>
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:checked="true"
                        android:hint="@string/reps"/>
                    <RadioButton
                        android:id="@+id/minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/minutes"/>
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/weightLabel"
                    android:layout_toStartOf="@+id/weightLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorTextLight"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/weight" />
                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/weightEditText"
                    android:layout_alignParentTop="true"
                    android:text="@string/lbs_optional" />
            </RelativeLayout>

            <EditText
                android:id="@+id/caloriesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextLight"
                android:padding="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="number"
                android:hint="@string/calories"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/colorTextLight">
                <Spinner
                    android:id="@+id/muscleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/addAnotherExerciseIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_add_circle_outline_black_24dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorSecondaryText"
            android:textColor="@color/colorTextLight"
            android:text="Save"/>
    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_navigation_main" />
</RelativeLayout>
